<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Weather App</string>

   <string name="add_city_dialog_bundle_key">input</string>
   <string name="zipcode_extra">zipcode_extra</string>
   <string name="city_dialog_preferred">Set Preferred</string>
   <string name="city_dialog_delete">Delete</string>
   <string name="city_dialog_cancel">Cancel</string>
   <string name="add_city_dialog_title">Add City</string>
   <string name="invalid_zipcode_error">Invalid ZIP code.</string>
   <string name="zipcode_prompt">Please enter a ZIP code:</string>
   <string name="zipcode">ZIP code:&#160;</string>
   <string name="save">Save&#160;</string>
   <string name="temperature_unit">F</string>
   <string name="temperature_label_string">Temperature:&#160;</string>
   <string name="feels_like_label_string">Feels like:&#160;</string>
   <string name="humidity_label_string">Humidity:&#160;</string>
   <string name="chance_of_precipitation_label_string">Chance of Precipitation:&#160;</string>
   <string name="loading_message">Loading Forecast....</string>
   <string name="forecast_list">forecastList</string>
   <string name="add_city_button_text">Add City</string>
   <string name="add_city_checkbox_text">Set as preferred city</string>
   <string name="duplicate_zipcode_error">Duplicate ZIP code.</string>
   <string name="city_dialog_message_prefix">Perform which action on&#160;</string>
   <string name="city_dialog_message_postfix">\?</string>
   <string name="click_widget_message">Click to launch WeatherViewer app.</string>
   <string name="null_data_toast">Data could not be read from web service.</string>
   <string name="last_city_warning">Cannot delete the last city.</string>
   <string name="add_new_city">Add New City</string>
   <string name="default_zipcode">02115</string>

    <string name="error_location_null">IMPORTANT:  The Weather Bug API has changed, needs to be updated.</string>
</resources>
